# whisp

./: .gitignore  .swiftlint.yml  CLAUDE.md  Info.plist  Makefile  Package.swift
.github/workflows/: ci.yml  release.yml
Sources/: VersionInfo.swift.template
Sources/App/: AppDefaults.swift  AppDelegate+Hotkeys.swift  AppDelegate+Lifecycle.swift  (+7 more)
Sources/Resources/: pyproject.toml
Tests/: AccessibilityPermissionManagerTests.swift  AppCategoryManagerTests.swift  AppStatusTests.swift  AudioProcessorTests.swift  AudioRecorderTests.swift  AudioValidatorTests.swift  DataManagerIntegrationTests.swift  DataManagerTests.swift  ErrorPresenterTests.swift  FloatingMicrophoneDockViewModelTests.swift  FnGlobeMonitorTests.swift  HotKeyManagerTests.swift  LocalWhisperServiceTests.swift  MLDaemonManagerTests.swift  MLXCorrectionServiceTests.swift  MLXModelManagerTests.swift  ModelManagerTests.swift  ParakeetServiceTests.swift  PasteManagerTests.swift  PermissionManagerTests.swift  PressAndHoldKeyMonitorTests.swift  PressAndHoldTriggerStateTests.swift  PythonDetectorTests.swift  SemanticCorrectionServiceTests.swift  SemanticCorrectionTests.swift  ShowAudioFileButtonTest.swift  SoundManagerTests.swift  SourceUsageStoreTests.swift  SpeechToTextServiceTests.swift  TextCleaningTests.swift  TranscriptionRecordTests.swift  TranscriptionTypesTests.swift  UsageMetricsStoreTests.swift  UtilityTests.swift  UvBootstrapTests.swift
scripts/: build.sh  generate-app-icon.swift  install-voiceflow.sh  run-tests.sh  swiftpm-preflight.sh
tasks/: lessons.md  todo.md
whisp/: .gitignore
(+64 files in other folders)
